# spinsfast

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  deploy.sh  pipify.sh  pyproject.toml  requirements.txt  setup.py
.github/scripts/: update_versions.py
.github/workflows/: build.yml  build_linux.yml  build_mac.yml  build_win.yml  conda_build.yml  make_sdist.yml
.github/workflows/actions/: entrypoint.sh
code/: alm.c  dump_cimage.c  healpix_convert.c  module.mk  spinsfast_backward_Gmm.c  spinsfast_backward_Gmm_alm2iqu.c  spinsfast_backward_transform.c  spinsfast_forward_Imm.c  spinsfast_forward_Jmm.c  spinsfast_forward_transform.c  spinsfast_forward_transform_eo.c  spinsfast_forward_transform_from_Imm.c  spinsfast_forward_transform_iqu2alm.c  wigner_d_halfpi_Risbo.c  wigner_d_halfpi_TN.c  wigner_d_halfpi_methods.c
conda/: .binstar.yml  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
docker/: Dockerfile  entrypoint.sh
example/: example_iqu.c  example_multispin.c  example_spin.c  example_spin.py  module.mk  spinsfast.ipynb
include/: alm.h  fftw.h  healpix_convert.h  inline.h  restrict.h  spinsfast_backward.h  spinsfast_forward.h  wigner_d_halfpi.h  wigner_d_halfpi_Risbo.h  wigner_d_halfpi_TN.h  wigner_d_halfpi_methods.h
python/: __init__.py  build_macosx_wheels.sh  build_manylinux_wheels.sh  cextension.c  module.mk  setup.py  spinsfast_module.c
python/docker_miniconda/: Dockerfile  build.sh
