[tool.poetry]
name = "spinsfast"
version = "2022.4.2"
description = "Fast and exact spin-s spherical-harmonic transforms"
readme = "README.md"
license = "GPL-3.0-only"
authors = ["Michael Boyle <mob22@cornell.edu>"]
homepage = "https://github.com/moble/spinsfast"

[tool.cibuildwheel]
# See pyfftw for a good example: https://github.com/pyFFTW/pyFFTW/blob/master/.github/workflows/wheel_tests_and_release.yml
# SciPy and NumPy don't support musllinux
# SciPy and NumPy don't support 32-bit Linux from Python 3.10 and onwards
# Numpy only supports pypy38 x86_64 on Linux
#skip = "cp36-* cp37-* pp37-* pp38-*i686 pp38-macos* pp39-* *musl* *-win*"
skip = "*p36-* *p37-* pp38-*i686 pp39-* *musl* *-win* cp310-manylinux_i686 cp311-manylinux_i686"
# before-build = "python -m pip install --no-cache-dir --force-reinstall oldest-supported-numpy"

[tool.cibuildwheel.environment]
# this makes sure that we build only on platforms that have a corresponding numpy wheel
PIP_ONLY_BINARY = ":all:"

[tool.cibuildwheel.macos]
# Docs say not to use homebrew: https://cibuildwheel.readthedocs.io/en/stable/faq/#missing-dependencies
# If there are problems on macos arm or something, this is probably why
before-all = "brew install fftw"
before-test = "python -m pip install oldest-supported-numpy"
test-command = "python -c 'import spinsfast'"

[tool.cibuildwheel.linux]
before-all = "yum install -y fftw fftw-devel"
before-test = "python -m pip install oldest-supported-numpy"
test-command = "python -c 'import spinsfast'"

[[tool.cibuildwheel.overrides]]
select = "*musllinux*"
before-all = "apk add fftw fftw-dev"

[build-system]
requires = ["setuptools!=50.0", "wheel", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"
